--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -1,28 +1,18 @@
 
-
-
-
 .h1 {
 
-padding-top: 40em;
+justify-content: center;
 font-size: 100em;
 color: #000;
 
 
 }
 
-#about {
+.abh1 {
 
-    padding-top: 40em;
-    font-size: 100em;
-    color: #000;
+    font-size: 10em;
+    color: aqua;
     
     
-    }
-
-
-body {
-
-color: #000;
-
 }
+
