--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,7 +1,6 @@
 
 // to make container fill width 
 .container {
-    flex-grow: 1;
     padding-bottom: 100vh;
 }
 
@@ -11,7 +10,7 @@
 
 
 .title {
-    padding-left: 10%;
+    margin-top: 200px;
 }
 
 
